--- a/configure/CONFIG
+++ b/configure/CONFIG
@@ -5,10 +5,12 @@ EPICS_MODULE_NAME:=ADCore
 # *) master branch 
 #    export EPICS_MODULE_TAG:=master
 # *) individual hash 
-export EPICS_MODULE_TAG:=master
+export EPICS_MODULE_TAG:=tags/R3-2
 export EPICS_MODULE_SRC_PATH:=ADCore
 export ESS_MODULE_MAKEFILE:=$(EPICS_MODULE_NAME).Makefile
 export PROJECT:=$(EPICS_MODULE_NAME)
-export LIBVERSION:=0.0.1
+export LIBVERSION:=3.2.0
+export E3_ENV_PATH:=e3-env
 export E3_ENV_NAME:=e3-env
+#export E3_ENV_NAME:=E3_ENV_CONF
 #export E3_ENV_TAG:=v0.1
