--- a/configure/CONFIG
+++ b/configure/CONFIG
@@ -1,35 +1,38 @@
-EPICS_MODULE_NAME:=ADCore
-# This is the module source tag
-# *) individual tags
-#    export EPICS_MODULE_TAG:=tags/1.1.1
-# *) master branch 
-#    export EPICS_MODULE_TAG:=master
-# *) individual hash 
-export EPICS_MODULE_TAG:=tags/R3-2
-export EPICS_MODULE_SRC_PATH:=ADCore
-export ESS_MODULE_MAKEFILE:=$(EPICS_MODULE_NAME).Makefile
-export PROJECT:=$(EPICS_MODULE_NAME)
-export LIBVERSION:=3.2.0
-export E3_ENV_PATH:=e3-env
-export E3_ENV_NAME:=e3-env
-#export E3_ENV_NAME:=E3_ENV_CONF
-#export E3_ENV_TAG:=v0.1
+VARS_EXCLUDES := $(.VARIABLES)
 
-# export WITH_HDF5   = YES
-# export WITH_JPEG   = YES
-# export WITH_NETCDF = YES
-# export WITH_NEXUS  = YES
-# export WITH_TIFF   = YES
 
-#PVA Is not supported in e3 yet.
-export WITH_PVA    = NO
+ifneq (,$(findstring dev,$(MAKECMDGOALS)))
+include $(TOP)/configure/RELEASE_DEV
+else
+include $(TOP)/configure/RELEASE
+endif
 
-# #ASYN_DEP_VER = <X.Y.Z>
-# ifdef ASYN_DEP_VER
-# 	#Take the specific version
-# 	ASYN_DEP_PATH = $(EPICS_MODULES)/asyn/$(ASYN_DEP_VER)
-# else 
-# 	#Take the last numbered version
-# 	ASYN_DEP_PATH = $(lastword $(sort $(dir $(wildcard $(EPICS_MODULES)/asyn/*/))))
-# endif
-# export ASYN_DEP_PATH
+# CONFIG=$(EPICS_BASE)/configure
+# include $(CONFIG)/CONFIG
+
+ifneq (,$(findstring dev,$(MAKECMDGOALS)))
+include $(TOP)/configure/CONFIG_MODULE_DEV
+else
+include $(TOP)/configure/CONFIG_MODULE
+endif
+
+# The definitions shown below can also be placed in an untracked RELEASE.local
+-include $(TOP)/../RELEASE.local
+-include $(TOP)/configure/RELEASE.local
+-include $(TOP)/../CONFIG_MODULE.local
+-include $(TOP)/configure/CONFIG_MODULE.local
+
+
+## Asyn, ADSupport may needs to define other variables
+
+-include $(TOP)/configure/CONFIG_OPTIONS
+
+## It is not necessary to modify the following files in most case.
+## Order is matter
+
+include $(TOP)/configure/E3/CONFIG_REQUIRE
+include $(TOP)/configure/E3/CONFIG_E3_PATH
+include $(TOP)/configure/E3/CONFIG_E3_MAKEFILE
+include $(TOP)/configure/E3/CONFIG_EPICS
+include $(TOP)/configure/E3/CONFIG_SUDO
+include $(TOP)/configure/E3/CONFIG_EXPORT
